--- a/src/page/HomePage.module.css
+++ b/src/page/HomePage.module.css
@@ -1,18 +1,34 @@
 .home {
     background-image: url(../../images/image.png);
     width: 1400px;
-height: 762px;
+    height: 762px;
 }
 
 .title {
     font-family: "Bluu Next Cyrillic", sans-serif;
+    font-weight: 700;
+    font-size: 80px;
+    line-height: 1.25;
+    letter-spacing: 0.01em;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fabf59;
+    padding-top: 100px;
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.link {
 font-weight: 700;
-font-size: 80px;
-line-height: 1.25;
-letter-spacing: 0.01em;
-text-transform: uppercase;
+font-size: 18px;
+line-height: 1.3;
 text-align: center;
-color: #fabf59;
-padding-top: 100px;
-text-align: center;
+color: #1d1d1d;
+border-radius: 100px;
+width: 300px;
+height: 60px;
+background: #f9b50c;
+padding: 19px 37px;
+margin-left: 600px;
+
 }
