--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 h1,
@@ -55,4 +56,9 @@ img {
   display: block;
   width: 100%;
   height: auto;
+}
+
+@font-face {
+  font-family: "Bluu Next Cyrillic";
+  src: url("/path/to/BluuNextCyrillic.ttf") format("truetype");
 }
