--- a/src/page/HomePage.module.css
+++ b/src/page/HomePage.module.css
@@ -29,7 +29,11 @@ border-radius: 100px;
 width: 300px;
 height: 60px;
 background: #f9b50c;
-padding: 19px 37px;
 margin-left: 600px;
+cursor: pointer;
+}
+
+.link:hover {
+    background: #fed365;
 
 }
