--- a/src/page/HomePage.module.css
+++ b/src/page/HomePage.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins";
     font-weight: 600;
     font-size: 80px;
     line-height: 1.25;
@@ -20,7 +20,7 @@
 }
 
 .link {
-font-family: "Poppins", sans-serif;
+font-family: "Poppins";
 font-weight: 700;
 font-size: 18px;
 line-height: 1.3;
