--- a/src/page/TitlePage.module.css
+++ b/src/page/TitlePage.module.css
@@ -3,11 +3,10 @@
     gap: 20px;
     text-align: center;
     justify-content: center;
-    margin-top: 220px;
-    background-color: rgb(34, 34, 34);
+    margin-top: 200px;
+    background-color: rgb(25, 25, 25);
     padding-bottom: 100px;
     padding-top: 20px;
-
 }
 
 .img {
@@ -15,11 +14,11 @@
     border-radius: 20px;
     width: 400px;
     height: 400px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .link {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins";
     font-weight: 700;
     font-size: 18px;
     line-height: 1.3;
