--- a/src/page/PageOne.module.css
+++ b/src/page/PageOne.module.css
@@ -1,5 +1,6 @@
 .main {
     background-color: black;
+    padding-bottom: 70px;
 }
 
 .list {
@@ -50,6 +51,7 @@ color: #fff;
     height: 452px;
 }
 
+
 .item2 {
     background-image: url(../../images/image5.png);
     border-radius: 20px;
@@ -59,6 +61,41 @@ color: #fff;
 
 .item3 {
     background-image: url(../../images/image6.png);
+    border-radius: 20px;
+    width: 295px;
+    height: 452px;
+}
+
+.item4 {
+    background-image: url(../../images/image7.png);
+    border-radius: 20px;
+    width: 295px;
+    height: 452px;
+}
+
+.item5 {
+    background-image: url(../../images/image8.png);
+    border-radius: 20px;
+    width: 295px;
+    height: 452px;
+}
+
+.item6 {
+    background-image: url(../../images/image9.png);
+    border-radius: 20px;
+    width: 295px;
+    height: 452px;
+}
+
+.item7 {
+    background-image: url(../../images/image10.png);
+    border-radius: 20px;
+    width: 295px;
+    height: 452px;
+}
+
+.item8 {
+    background-image: url(../../images/image11.png);
     border-radius: 20px;
     width: 295px;
     height: 452px;
