--- a/src/page/PageOne.module.css
+++ b/src/page/PageOne.module.css
@@ -10,6 +10,13 @@
     justify-content: center; /* Центрирует элементы */
 }
 
+.name {
+    font-weight: 500;
+font-size: 26px;
+line-height: 1.4;
+color: #fff;
+}
+
 .title {
     font-family: "Poppins";
     font-weight: 400;
