--- a/src/page/PageThere.module.css
+++ b/src/page/PageThere.module.css
@@ -179,3 +179,24 @@ height: 38px;
     align-items: center;
     gap: 10px;
 }
+
+.comdiv {
+    width: 300px; 
+    height: 59px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease; 
+    overflow: hidden; 
+}
+
+.comdiv:hover {
+    border-radius: 100px;
+    width: 300px;
+    height: 59px;
+    background: #f9b50c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+} 
