--- a/src/page/PageOne.module.css
+++ b/src/page/PageOne.module.css
@@ -145,3 +145,10 @@ align-items: center;
     border: 3px solid gold; 
 }
 
+.linkback {
+   width: 170px;
+   height: 60px;
+   margin-top: 30px;
+   margin-left: 10px;
+   border-radius: 30px;
+}
