--- a/src/page/PageOne.module.css
+++ b/src/page/PageOne.module.css
@@ -149,6 +149,6 @@ align-items: center;
    width: 170px;
    height: 60px;
    margin-top: 30px;
-   margin-left: 10px;
+   margin: 30px auto;
    border-radius: 30px;
 }
