--- a/src/page/PageTwo.module.css
+++ b/src/page/PageTwo.module.css
@@ -145,3 +145,10 @@ align-items: center;
     border: 3px solid gold; 
 }
 
+.linkback {
+    width: 170px;
+    height: 60px;
+    margin-top: 30px;
+    margin: 30px auto;
+    border-radius: 30px;
+ }
